# image-generation

./: .gitignore  Dockerfile  README.md  auth_google.py  docker-compose.yml  download_batch.py  main.py  pyproject.toml  test.py
config/: __init__.py  config.py
migrations/: 001_add_image_cms_id.py  002_add_published.py  003_add_source_url.py  004_remove_batch_job_image_fields.py  005_add_prompt.py
models/: __init__.py  models.py
services/: __init__.py
services/batch/: __init__.py  batch_service.py
services/bot/: bot.py  formatters.py  keyboards.py  locks.py  utils.py
services/bot/handlers/: __init__.py  generation.py  parsing.py  publish.py  start.py  status.py
services/gateway/: __init__.py  gateway_client.py
services/google_drive/: google_drive.py
services/google_sheets/: __init__.py  google_sheets.py
services/image_description/: __init__.py  image_description_service.py
services/parser/: parser.py  schemas.py
services/sync/: __init__.py  sync_service.py
